--- a/frontend/k-card-ventas/index.html
+++ b/frontend/k-card-ventas/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,9 +18,10 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font"> Home </a>
-
-          <a class="navbar-item font"> Documentation </a>
+          <a class="navbar-item font" href=""> Inicio </a>
+          <a class="navbar-item font" href=""> Photocards </a>
+          <a class="navbar-item font" href=""> Albums </a>
+          <a class="navbar-item font" href=""> Ventas </a>
         </div>
       </div>
     </nav>
