--- a/frontend/k-card-inicio/index.html
+++ b/frontend/k-card-inicio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,27 +7,41 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
     />
+    <link rel="stylesheet" href="./style.css" />
     <title>Inicio</title>
   </head>
   <body>
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+    <nav
+      class="navbar is-fixed-top color"
+      role="navigation"
+      aria-label="main navigation"
+    >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item"> Home </a>
-
-          <a class="navbar-item"> Documentation </a>
+          <a class="navbar-item font" href=""> Inicio </a>
+          <a class="navbar-item font" href=""> Photocards </a>
+          <a class="navbar-item font" href=""> Albums </a>
+          <a class="navbar-item font" href="../k-card-ventas/index.html">
+            Ventas
+          </a>
         </div>
       </div>
     </nav>
+    <div class="container-img">
+      <img src="../imagenes/logopagina.jpeg" alt="" />
+    </div>
+
     <div class="container">
-      <div class="notification is-dark mt-6">
-        <a
-          class="button is-medium is-fullwidth"
-          href="../k-card-compras/index.html"
-          >Compras</a
+      <div class="notification bg-color mt-2">
+        <a class="button is-medium is-fullwidth button-change" href=""
+          >Photocards</a
         >
-        <a class="button is-medium is-fullwidth mt-1">Anchor</a>
-        <a class="button is-medium is-fullwidth mt-1">Anchor</a>
+        <a class="button is-medium is-fullwidth button-change">Albums</a>
+        <a
+          class="button is-medium is-fullwidth button-change"
+          href="../k-card-ventas/index.html"
+          >Ventas</a
+        >
       </div>
     </div>
   </body>
