--- a/frontend/k-card-albums/index.html
+++ b/frontend/k-card-albums/index.html
@@ -28,7 +28,10 @@
       </div>
     </nav>
     <div class="container-button">
-      <a href="" class="button button-change">Crear Album</a>
+      <h2 id="title-pag" class="nombre-album">Albums</h2>
+      <a href="./k-card-album-create/index.html" class="button button-change"
+        >Crear Album</a
+      >
     </div>
     <div id="container-card" class="container is-fluid container-card"></div>
     <script src="./code.js"></script>
