--- a/frontend/k-card-ventas/index.html
+++ b/frontend/k-card-ventas/index.html
@@ -18,9 +18,15 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href=""> Inicio </a>
-          <a class="navbar-item font" href=""> Photocards </a>
-          <a class="navbar-item font" href=""> Albums </a>
+          <a class="navbar-item font" href="../k-card-inicio/index.html">
+            Inicio
+          </a>
+          <a class="navbar-item font" href="../k-card-photocard/index.html">
+            Photocards
+          </a>
+          <a class="navbar-item font" href="../k-card-albums/index.html">
+            Albums
+          </a>
           <a class="navbar-item font" href=""> Ventas </a>
         </div>
       </div>
