--- a/frontend/k-card-ventas/k-card-venta-create/index.html
+++ b/frontend/k-card-ventas/k-card-venta-create/index.html
@@ -10,6 +10,26 @@
     />
   </head>
   <body>
+    <nav
+      class="navbar is-fixed-top color"
+      role="navigation"
+      aria-label="main navigation"
+    >
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item font" href="../../k-card-albums/index.html">
+            Inicio
+          </a>
+          <a class="navbar-item font" href="../../k-card-photocard/index.html">
+            Photocards
+          </a>
+          <a class="navbar-item font" href="../../k-card-albums/index.html">
+            Albums
+          </a>
+          <a class="navbar-item font" href="../index.html"> Ventas </a>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <h2 class="title-form">Agregar Venta</h2>
       <p class="title-form">La fecha esta en formato (Mes-Dia-Año)</p>
