--- a/frontend/k-card-albums/k-card-album-create/index.html
+++ b/frontend/k-card-albums/k-card-album-create/index.html
@@ -17,10 +17,14 @@
     >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item font" href=""> Inicio </a>
-          <a class="navbar-item font" href=""> Photocards </a>
-          <a class="navbar-item font" href=""> Albums </a>
-          <a class="navbar-item font" href="../k-card-ventas/index.html">
+          <a class="navbar-item font" href="../../k-card-inicio/index.html">
+            Inicio
+          </a>
+          <a class="navbar-item font" href="../../k-card-photocard/index.html">
+            Photocards
+          </a>
+          <a class="navbar-item font" href="../index.html"> Albums </a>
+          <a class="navbar-item font" href="../../k-card-ventas/index.html">
             Ventas
           </a>
         </div>
