--- a/frontend/k-card-inicio/index.html
+++ b/frontend/k-card-inicio/index.html
@@ -19,8 +19,10 @@
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item font" href=""> Inicio </a>
-          <a class="navbar-item font" href=""> Photocards </a>
-          <a class="navbar-item font" href=""> Albums </a>
+          <a class="navbar-item font" href="../k-card-photocard/index.html">
+            Photocards
+          </a>
+          <a class="navbar-item font" href="../k-card-albums/"> Albums </a>
           <a class="navbar-item font" href="../k-card-ventas/index.html">
             Ventas
           </a>
@@ -33,10 +35,16 @@
 
     <div class="container">
       <div class="notification bg-color mt-2">
-        <a class="button is-medium is-fullwidth button-change" href=""
+        <a
+          class="button is-medium is-fullwidth button-change"
+          href="../k-card-photocard/index.html"
           >Photocards</a
         >
-        <a class="button is-medium is-fullwidth button-change">Albums</a>
+        <a
+          class="button is-medium is-fullwidth button-change"
+          href="../k-card-albums/"
+          >Albums</a
+        >
         <a
           class="button is-medium is-fullwidth button-change"
           href="../k-card-ventas/index.html"
