--- a/frontend/k-card-photocard/index.html
+++ b/frontend/k-card-photocard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Albums</title>
+    <title>Photocards</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
@@ -21,10 +21,8 @@
           <a class="navbar-item font" href="../k-card-inicio/index.html">
             Inicio
           </a>
-          <a class="navbar-item font" href="../k-card-photocard/index.html">
-            Photocards
-          </a>
-          <a class="navbar-item font" href=""> Albums </a>
+          <a class="navbar-item font" href=""> Photocards </a>
+          <a class="navbar-item font" href="../k-card-albums/"> Albums </a>
           <a class="navbar-item font" href="../k-card-ventas/index.html">
             Ventas
           </a>
@@ -32,9 +30,11 @@
       </div>
     </nav>
     <div class="container-button">
-      <h2 id="title-pag" class="nombre-album">Albums</h2>
-      <a href="./k-card-album-create/index.html" class="button button-change"
-        >Crear Album</a
+      <h2 id="title-pag" class="nombre-photocard">Photocards</h2>
+      <a
+        href="./k-card-photocard-create/index.html"
+        class="button button-change"
+        >Crear Photocard</a
       >
     </div>
     <div id="container-card" class="container is-fluid container-card"></div>
