--- a/frontend/k-card-ventas/k-card-venta/index.html
+++ b/frontend/k-card-ventas/k-card-venta/index.html
@@ -12,12 +12,23 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+    <nav
+      class="navbar is-fixed-top color"
+      role="navigation"
+      aria-label="main navigation"
+    >
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item"> Home </a>
-
-          <a class="navbar-item"> Documentation </a>
+          <a class="navbar-item font" href="../../k-card-inicio/index.html">
+            Inicio
+          </a>
+          <a class="navbar-item font" href="../../k-card-photocard/index.html">
+            Photocards
+          </a>
+          <a class="navbar-item font" href="../../k-card-albums/index.html">
+            Albums
+          </a>
+          <a class="navbar-item font" href="../index.html"> Ventas </a>
         </div>
       </div>
     </nav>
