Arreglando algunos errores de mi git pull

--- a/frontend/Pagina-de-Administrador/k-card-inicio/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/index.html
@@ -30,7 +30,7 @@
       </div>
     </nav>
     <div class="container-img">
-      <img src="../imagenes/logopagina.jpeg" alt="" />
+      <img src="../../imagenes/logopagina.jpeg" alt="" />
     </div>
 
     <div class="container">
