Arreglo unas pequeñas cositas de ventas

--- a/frontend/Pagina-de-Administrador/k-card-ventas/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-ventas/index.html
@@ -32,7 +32,7 @@
       </div>
     </nav>
     <div class="container-button-venta is-flex">
-      <div class="dropdown is-active custom-dropdown">
+      <div class="dropdown custom-dropdown">
         <div class="dropdown-trigger">
           <button
             class="button filter-button"
@@ -50,7 +50,9 @@
               <option value="NameZ-A">Nombre (Z-A)</option>
               <option value="priceLowHigh">Precio (menor a mayor)</option>
               <option value="priceHighLow">Precio (mayor a menor)</option>
-              <option value="newestSale">Fecha de Venta (más reciente)</option>
+              <option selected value="newestSale">
+                Fecha de Venta (más reciente)
+              </option>
               <option value="oldestSale">Fecha de Venta (más antigua)</option>
             </select>
           </div>
