cambios en venta

--- a/frontend/Pagina-de-Administrador/k-card-ventas/k-card-venta/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-ventas/k-card-venta/index.html
@@ -171,8 +171,10 @@
       <button class="modal-close is-large" aria-label="close"></button>
     </div>-->
     <div class="products-container">
-      <h2>Productos Comprados</h2>
-      
+      <h2 class="products-title">Productos Comprados</h2>
+      <div id="container-card" class="container is-fluid container-card">
+
+      </div>
     </div>
     <script src="./code.js"></script>
   </body>
