--- a/frontend/Pagina-de-Administrador/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/index.html
@@ -32,7 +32,7 @@
       </div>
     </nav>
     <div class="container-button">
-      <h2 id="title-pag" class="nombre-album">Albums</h2>
+      <h2 id="title-pag">Albums</h2>
       <a href="./k-card-album-create/index.html" class="button button-change"
         >Crear Album</a
       >
