--- a/frontend/Pagina-de-Administrador/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/index.html
@@ -33,6 +33,44 @@
     </nav>
     <div class="container-button">
       <h2 id="title-pag">Albums</h2>
+      <div class="container-button-venta is-flex">
+        <div class="dropdown custom-dropdown">
+          <div class="dropdown-trigger">
+            <button
+              class="button filter-button"
+              aria-haspopup="true"
+              aria-controls="dropdown-menu"
+            >
+              <span>Filtros</span>
+            </button>
+          </div>
+          <div class="dropdown-menu" id="dropdown-menu" role="menu">
+            <div class="dropdown-content filter-content">
+              <span class="dropdown-title">Ordenar los Albums por:</span>
+              <select name="order-by" id="order-by" class="custom-select">
+                <option selected value="NameA-Z">Nombre (A-Z)</option>
+                <option value="NameZ-A">Nombre (Z-A)</option>
+              </select>
+              <span class="dropdown-title">Filtrar los Albums por</span>
+              <select
+                name="filter-by"
+                id="filter-by-group"
+                class="custom-select"
+              >
+                <option selected value="">Grupo</option>
+              </select>
+              <select
+                name="filter-by"
+                id="filter-by-version"
+                class="custom-select"
+              >
+                <option selected value="">Version</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <a href="./k-card-album-create/index.html" class="button button-change"
         >Crear Album</a
       >
