boton de filtro arreglado y funcional en albums

--- a/frontend/Pagina-de-Administrador/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/index.html
@@ -35,7 +35,9 @@
       <h2 id="title-pag">Albums</h2>
       <div class="container-button-venta is-flex">
         <div class="dropdown custom-dropdown">
-          <div class="dropdown-trigger">
+          <div
+            class="dropdown-trigger is-flex is-flex-direction-column is-justify-content-end"
+          >
             <button
               class="button filter-button"
               aria-haspopup="true"
