create album finalizada y cambios en la ubicacion de las imagenes

--- a/frontend/Pagina-de-Administrador/k-card-albums/k-card-album-create/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/k-card-album-create/index.html
@@ -61,7 +61,12 @@
         id="container-card"
         class="card-album is-flex is-flex-direction-column"
       >
-        <img src="../../../imagenes/no-img.jpeg" alt="" class="card-img" />
+        <img
+          id="cardImage"
+          src="/images/resources/no-img.jpeg"
+          alt=""
+          class="card-img"
+        />
         <p id="cardName" class="card-text card-name">Nombre del Álbum</p>
         <p id="cardGroup" class="card-text card-group">Grupo</p>
         <p id="cardVersion" class="card-text card-version">Version del Álbum</p>
