pequeño arreglo de create-album

--- a/frontend/Pagina-de-Administrador/k-card-albums/k-card-album-create/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/k-card-album-create/index.html
@@ -46,7 +46,10 @@
           <input type="text" id="versionAlbum" maxlength="30" required />
         </div>
         <div>
-          <label for="image">Imagen</label>
+          <label for="image"
+            >Imagen <br />
+            Sino quiere poner una imagen escriba "sin-imagen"</label
+          >
           <input type="text" id="image" />
         </div>
 
