Cambios en album y una modificacion en album update

--- a/frontend/Pagina-de-Administrador/k-card-albums/k-card-album/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/k-card-album/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Transaccion</title>
+    <title>Album</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"
@@ -35,12 +35,12 @@
     <div class="container color-bg">
       <div id="content">
         <div id="container-img"><img id="imgAlbum" src="" alt="" /></div>
-        <div class="tabla-detalle">
-          <div class="titulo-tabla">DETALLE DEL ALBUM</div>
+        <div class="detail-table">
+          <div class="title-table">DETALLE DEL ALBUM</div>
           <table>
             <tr>
               <td>Nombre del Album</td>
-              <td id="nombre"></td>
+              <td id="name-album"></td>
             </tr>
             <tr>
               <td>Version del Album</td>
@@ -48,15 +48,15 @@
             </tr>
             <tr>
               <td>Grupo</td>
-              <td id="grupo"></td>
+              <td id="group"></td>
             </tr>
             <tr>
-              <td>Fecha de Lanzamiento</td>
-              <td id="fecha-lanzamiento"></td>
+              <td>Empresa</td>
+              <td id="company"></td>
             </tr>
             <tr>
-              <td>Precio</td>
-              <td id="precio"></td>
+              <td>País</td>
+              <td id="country"></td>
             </tr>
           </table>
         </div>
@@ -67,38 +67,43 @@
       <div class="modal-background"></div>
 
       <div class="modal-content">
-        <div class="box">
+        <div class="box color-bg">
           <p class="title-form">Modificar Informacion</p>
           <p class="title-form">Los cambios se realizaran una vez guardados.</p>
           <div class="container-form">
             <form id="formulario">
               <div>
-                <label for="nombreAlbum">Nombre del Album</label>
-                <input type="text" id="nombreAlbum" maxlength="30" />
+                <label for="nameAlbum">Nombre del Album</label>
+                <input type="text" id="nameAlbum" maxlength="30" />
               </div>
               <div>
                 <label for="versionAlbum">Version del Album</label>
                 <input type="text" id="versionAlbum" maxlength="30" />
               </div>
               <div>
-                <label for="Grupo">Grupo</label>
-                <input type="text" id="Grupo" maxlength="20" />
+                <label for="Group">Grupo</label>
+                <input type="text" id="Group" maxlength="30" />
               </div>
               <div>
-                <label for="Imagen">Imagen</label>
-                <input type="text" id="Imagen" />
+                <label for="Image"
+                  >Imagen<br />
+                  Sino quiere poner una imagen escriba "sin-imagen"</label
+                >
+                <input type="text" id="Image" />
               </div>
               <div>
-                <label for="fechaLanzamiento">Fecha de Lanzamiento</label>
-                <input type="date" id="fechaLanzamiento" />
+                <label for="Company">Empresa</label>
+                <input type="text" id="Company" maxlength="15" />
               </div>
 
               <div>
-                <label for="Precio">Precio</label>
-                <input type="text" id="Precio" />
+                <label for="Country">País</label>
+                <input type="text" id="Country" maxlength="15" />
               </div>
 
-              <button type="submit">Guardar Cambios</button>
+              <button class="button-change modal-button" type="submit">
+                Guardar Cambios
+              </button>
             </form>
           </div>
         </div>
@@ -110,16 +115,18 @@
       class="containerModals is-flex is-justify-content-space-evenly buttons-container"
     >
       <button
-        class="js-modal-trigger is-primary is-medium modificar"
+        class="js-modal-trigger button-change modificar"
         data-target="modificar"
       >
         Modificar
       </button>
-      <button id="deleteButton" class="modificar">Eliminar</button>
+      <button id="deleteButton" class="button-change modificar">
+        Eliminar
+      </button>
     </div>
     <div style="margin-top: 60px">
       <h2 class="title-photocard">Photocards Asociadas al Album</h2>
-      <div id="container-card" class="container is-fluid container-card"></div>
+      <div id="containerCard" class="container is-fluid container-card"></div>
     </div>
 
     <script src="./code.js"></script>
