cambios en photocards y una cosita en la api

--- a/frontend/Pagina-de-Administrador/k-card-albums/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-albums/index.html
@@ -33,7 +33,7 @@
     </nav>
     <div class="container-button">
       <h2 id="title-pag">Albums</h2>
-      <div class="container-button-venta is-flex">
+      <div class="is-flex">
         <div class="dropdown custom-dropdown">
           <div
             class="dropdown-trigger is-flex is-flex-direction-column is-justify-content-end"
