--- a/frontend/Pagina-de-Administrador/k-card-photocard/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/index.html
@@ -23,21 +23,63 @@
           </a>
           <a class="navbar-item font" href=""> Photocards </a>
           <a class="navbar-item font" href="../k-card-albums/"> Albums </a>
-          <a class="navbar-item font" href="../k-card-ventas/index.html">
-            Ventas
-          </a>
+          <a class="navbar-item font" href=""> Ventas </a>
         </div>
       </div>
     </nav>
     <div class="container-button">
-      <h2 id="title-pag" class="nombre-photocard">Photocards</h2>
+      <h2 class="title-pag">Photocards</h2>
+      <div class="is-flex">
+        <div class="dropdown custom-dropdown">
+          <div
+            class="dropdown-trigger is-flex is-flex-direction-column is-justify-content-end"
+          >
+            <button
+              class="button filter-button"
+              aria-haspopup="true"
+              aria-controls="dropdown-menu"
+            >
+              <span>Filtros</span>
+            </button>
+          </div>
+          <div class="dropdown-menu" id="dropdown-menu" role="menu">
+            <div class="dropdown-content filter-content">
+              <span class="dropdown-title">Ordenar los Albums por:</span>
+              <select name="order-by" id="order-by" class="custom-select">
+                <option selected value="NameA-Z">Nombre (A-Z)</option>
+                <option value="NameZ-A">Nombre (Z-A)</option>
+                <option value="priceLowHigh">Precio (menor a mayor)</option>
+                <option value="priceHighLow">Precio (mayor a menor)</option>
+              </select>
+
+              <span class="dropdown-title">Filtrar los Albums por</span>
+              <select
+                name="filter-by"
+                id="filter-by-group"
+                class="custom-select"
+              >
+                <option selected value="">Grupo</option>
+              </select>
+              <select
+                name="filter-by"
+                id="filter-by-availability"
+                class="custom-select"
+              >
+                <option selected value="">Disponibilidad</option>
+                <option value="Disponible">Disponible</option>
+                <option value="Vendida">Vendida</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
       <a
         href="./k-card-photocard-create/index.html"
         class="button button-change"
         >Crear Photocard</a
       >
     </div>
-    <div id="container-card" class="container is-fluid container-card"></div>
+    <div id="containerCard" class="container is-fluid container-card"></div>
     <script src="./code.js"></script>
   </body>
 </html>
