agrego  que el albumy la imagen sea requerida para enviar el formulario

--- a/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-create/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-photocard/k-card-photocard-create/index.html
@@ -50,11 +50,11 @@
             >Imagen <br />
             Sino quiere poner una imagen escriba "sin-imagen"</label
           >
-          <input type="text" id="image" />
+          <input type="text" id="image" required />
         </div>
         <div>
           <label for="albumPhotocard">Album de la Photocard</label>
-          <select name="albumPhotocard" id="albumPhotocard">
+          <select name="albumPhotocard" id="albumPhotocard" required>
             <option selected value="">Sin Album</option>
           </select>
         </div>
